# capyroom-holder-radar

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: daily.yml  pages.yml  snapshot.yml
app/: README.md  index.html
app/assets/: data.js  radar.js  styles.css
data/: snapshot.sqlite
src/holder_radar/: __init__.py  bgeometrics.py  bigquery_cohort.py  cli.py  config.py  export.py  judge.py  line_bot.py  notify.py  prices.py  store.py
tests/: conftest.py  test_bgeometrics.py  test_bigquery_cohort.py  test_core.py  test_pipeline.py
