[project]
name = "holder-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gary Shen", email = "gary.shen@itrue.com.tw" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
holder-radar = "holder_radar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
