[project]
name = "holder-radar"
version = "0.1.0"
description = "免費開源繁中的 BTC 持有者結構雷達(LTH/STH 供給+成本線,BigQuery 自算,LINE/TG 推播)"
readme = "README.md"
authors = [
    { name = "Gary Shen", email = "gary.shen@itrue.com.tw" }
]
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.42.1",
    "requests>=2.34.2",
]

[project.scripts]
holder-radar = "holder_radar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
